# lie-algebra

./: AGENT.md  Cargo.toml  README.md
examples/: tutorial.rs
memory/: JOURNAL.md
src/: lib.rs  tests.rs
